[gd_scene load_steps=3 format=3 uid="uid://bfc6wq7lwjhxj"]

[ext_resource type="Script" uid="uid://u5it44tntj4c" path="res://scripts/ShopUI.gd" id="1_fr6wt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fr6wt"]
bg_color = Color(0.109804, 0.109804, 0.109804, 0.937255)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ShopUI" type="Control"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fr6wt")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fr6wt")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Miner's Shop"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="OffersScroll" type="ScrollContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OffersContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/OffersScroll"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Background/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Close"
